--- a/style.css
+++ b/style.css
@@ -19,9 +19,19 @@ h2 {
 }
 
 header {
-    color: orange;
-    border-radius: 5px;
-    border: 4px;
+    color: rgb(12, 12, 12);
+    border-radius: 3px;
+    border: 6px;
+    text-align: center;
+    height: 100px;
+}
+
+header > p {
+	color: rgb(12, 0, 0);
+}
+
+header {
+	background-color: rgb(226, 189, 66);  */
 }
 
 nav {
@@ -30,7 +40,9 @@ nav {
 }
 
 nav > a {
-
+    margin: 3px;
+    text-decoration: none;
+    color: paleturquoise;
 }
 
 nav:hover {
